tests/negative/abilities/with_non_ability_type.orng
// with_non_ability_type.orng:6:31: error: expected an ability, got the type `Int`
//     let x: Int -> Int with Int = undefined
//                              ^
// 
fn main() -> Int {
    let x: Int -> Int with Int = undefined
    3
}
